@@ -1,10 +1,12 @@
 import java.io.*;
+
 class DefaultDownloadFolderLocationFinder {
+    //    private static final String REG_NAME = "reg query \"HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\User Shell Folders\" /v {374DE290-123F-4565-9164-39C4925E467B}";
     private static final String REG_TOKEN = "REG_EXPAND_SZ";
-    private static final String REG_NAME = "reg query \"HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\User Shell Folders\" /v {374DE290-123F-4565-9164-39C4925E467B}";
     public static String findPath() {
         try {
-            Process process = Runtime.getRuntime().exec(REG_NAME);
+//            Process process = Runtime.getRuntime().exec(REG_NAME); // Deprecated
+            Process process = new ProcessBuilder("reg", "query", "\"HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\User Shell Folders\"", "/v", "{374DE290-123F-4565-9164-39C4925E467B}").start();
             StreamReader reader = new StreamReader(process.getInputStream());
             reader.start();
             process.waitFor();
@@ -33,6 +35,7 @@ class DefaultDownloadFolderLocationFinder {
             sw = new StringWriter();
         }
 
+        @Override
         public void run() {
             try {
                 int c;
